--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Carbonite App Not Working? Top Fixes for Backup and Sync Issues</title>
     <meta name="description" content="Facing Carbonite app not working issues? Learn top solutions for Carbonite backup not syncing, Carbonite app errors, and common Carbonite problems.">
     <meta name="keywords" content="Carbonite app not working, Carbonite backup issues, Carbonite not syncing, Carbonite app errors, Carbonite troubleshooting, Carbonite support, Carbonite login problems, Carbonite restore issues">
+    <meta name="google-site-verification" content="d0lssGdpu3l7_Nicxnjhc39eSSb_cLfCCuvEGgRbtDc" />
+    <meta name="msvalidate.01" content="7F5B916238BF00E8F8FAC1ED7F2FE57C" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,7 +47,12 @@
             background-color: #fff;
             border-radius: 8px;
         }
-        h1, h2, h3 {
+        h1{
+            color:white;
+        }
+    
+        
+        h2, h3 {
             color: #0056b3;
         }
         p {
